banner overflow fixed

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -6,7 +6,7 @@
 .carousel-parent img{
     width: 100%;
     height:  100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     object-fit: cover;
 }
 
@@ -14,10 +14,11 @@
     display: flex;
     max-width: 100%;
     height: auto;
-
 }
 
-
+.all-carousel{
+    overflow: hidden;
+}
 
 .banner-text{
     position: absolute;
@@ -25,21 +26,15 @@
     right: 50%;
     color: white;
     padding-left: 1.5em;
-
 }
-
-
 
 .home-slider{
     position: relative;
-
 }
 
 .carousel-footer-parent{
     display: flex;
-
 }
-
 
 .carousel-footer{
     border-top: 1px solid white;
@@ -51,7 +46,6 @@
     cursor: pointer;
     overflow: hidden;
 }
-
 
 .under-carousel{
     position: absolute;
@@ -66,27 +60,19 @@
 
 .footer-1:hover{
     background-image: url('../imgs/galery5.jpg');    
-    /* filter: brightness(80%); */
-    /* background-size: 100% 100%; */
     background-size: cover;
 }
 
 .footer-2:hover{
     background-image: url('../imgs/gal4.jpg');   
-    /* filter: brightness(80%); */
-    /* background-size: 100% 100%; */
     background-size: cover;
 }
 
 
 .footer-3:hover{
     background-image: url('../imgs/galery1.jpg'); 
-    /* filter: brightness(80%); */
-    /* background-size: 100% 100%; */
     background-size: cover;
 }
-
-
 
 .nav-bar-front{
     position: absolute;
@@ -102,5 +88,21 @@
 
     .under-carousel{
         position: relative;
+    }
+
+    .footer-1{
+        background-image: url('../imgs/galery5.jpg');    
+        background-size: cover;
+    }
+    
+    .footer-2{
+        background-image: url('../imgs/gal4.jpg');   
+        background-size: cover;
+    }
+    
+    
+    .footer-3{
+        background-image: url('../imgs/galery1.jpg'); 
+        background-size: cover;
     }
 }
